--- a/src/main/webapp/resources/css/cssLayout.css
+++ b/src/main/webapp/resources/css/cssLayout.css
@@ -20,7 +20,7 @@
     background: -moz-linear-gradient(white, gray); /* For Firefox 3.6 to 15 */
     background: linear-gradient(white, gray); /* Standard syntax */
     padding: 5px;
-    width: 300px;
+    width: 20%;
 }
 
 #right {
@@ -46,6 +46,7 @@
     background: linear-gradient(white, gray); /* Standard syntax */
     font-size: 14pt;
     padding: 5px;
+    margin-left: 20%;
 }
 
 .right_content {
