--- a/src/main/webapp/resources/css/cssLayout.css
+++ b/src/main/webapp/resources/css/cssLayout.css
@@ -19,7 +19,7 @@
     background: -o-linear-gradient(white, gray); /* For Opera 11.1 to 12.0 */
     background: -moz-linear-gradient(white, gray); /* For Firefox 3.6 to 15 */
     background: linear-gradient(white, gray); /* Standard syntax */
-    padding: 5px;
+    font-size: 12pt;
     width: 20%;
 }
 
@@ -45,8 +45,8 @@
     background: -moz-linear-gradient(white, gray); /* For Firefox 3.6 to 15 */
     background: linear-gradient(white, gray); /* Standard syntax */
     font-size: 14pt;
-    padding: 5px;
     margin-left: 20%;
+    padding: 5px;
 }
 
 .right_content {
@@ -56,15 +56,15 @@
 }
 
 #top a:link, #top a:visited {
-  color: black;
-  font-weight : bold;
-  text-decoration: none;
+    color: black;
+    font-weight : bold;
+    text-decoration: none;
 }
 
 #top a:link:hover, #top a:visited:hover  {
-  color: black;
-  font-weight : bold;
-  text-decoration : underline;
+    color: black;
+    font-weight : bold;
+    text-decoration : underline;
 }
 
 .botones{
@@ -92,5 +92,5 @@
 }
 
 .alignTop {
-vertical-align: top;
+    vertical-align: top;
 }
